<resources>
    <string name="app_name">ReThrift</string>

    <string name="username_create_hint">Username (3 to 12 characters)</string>
    <string name="password_create_hint">Password (6 to 18 characters)</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="verify_password_hint">Verify password</string>
    <string name="firstname_hint">First name</string>
    <string name="lastname_hint">Last name</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone number</string>
    <string name="title_hint">Title</string>
    <string name="price_hint">Price ($)</string>
    <string name="location_hint">Pickup location</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="action_settings">Settings</string>
    <string-array name="category_array">
        <item>Fun</item>
        <item>School</item>
        <item>Furniture</item>
        <item>Clothing</item>
        <item>Other</item>
    </string-array>

    <string-array name="price_search_array">
        <item>Price Low to High</item>
        <item>Price High to Low</item>
    </string-array>

    <string-array name="state_array">
        <item>FRESH</item>
        <item>PENDING SALE</item>
        <item>SOLD</item>
    </string-array>
    <string name="description_hint">Description</string>
    <string name="search_hint">Type...</string>

    <string name="login_btn">Login</string>
    <string name="create_acct_btn">Create Account</string>
    <string name="create_post_btn">Create Post</string>
    <string name="watchlist_btn">Add to Watchlist</string>
    <string name="unwatch_btn">Remove from Watchlist</string>
    <string name="contact_btn">Contact Seller</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="edit_post_btn">Update</string>
    <string name="camera_btn">camera</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>
