<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:maxLength="25"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:hint="@string/title_hint"
            android:textSize="20sp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/price_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/price_hint"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="140">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:inputType="textImeMultiLine"
            android:maxLength="140"
            android:imeOptions="actionDone"
            android:hint="@string/description_hint"
            android:textSize="16sp"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/update_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/edit_post_btn"
        android:onClick="updatePost"/>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF4336"
        android:textColor="@android:color/white"
        android:text="@string/delete_btn"
        android:onClick="deletePost"/>

</LinearLayout>